[gd_scene format=3 uid="uid://c0fhva7v6808"]

[ext_resource type="Script" uid="uid://bw65mguxhf3mq" path="res://src/SettingsMenu.gd" id="2"]

[node name="SettingsMenu" type="Window" unique_id=1830474107]
oversampling_override = 1.0
title = "Settings"
position = Vector2i(0, 36)
size = Vector2i(280, 176)
transient = true
exclusive = true
unresizable = true
script = ExtResource("2")

[node name="M" type="MarginContainer" parent="." unique_id=33824131]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.5
offset_top = -6.0
offset_right = 1.5
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="V" type="VBoxContainer" parent="M" unique_id=76994563]
layout_mode = 2

[node name="ShowDestsCheck" type="CheckBox" parent="M/V" unique_id=1356278637]
layout_mode = 2
text = "Show Legal Move Destinations"

[node name="ShowHighlightsCheck" type="CheckBox" parent="M/V" unique_id=1760981258]
layout_mode = 2
text = "Highlight Last Move/Check"

[node name="SoundsCheck" type="CheckBox" parent="M/V" unique_id=1301071378]
layout_mode = 2
text = "Play Sounds"

[node name="M" type="MarginContainer" parent="M/V" unique_id=1724381203]
layout_mode = 2
theme_override_constants/margin_left = 24

[node name="V" type="VBoxContainer" parent="M/V/M" unique_id=267878785]
layout_mode = 2

[node name="SoundCheckCheck" type="CheckBox" parent="M/V/M/V" unique_id=320172504]
layout_mode = 2
text = "Play Sound on Check"

[node name="SoundMusicCheck" type="CheckBox" parent="M/V/M/V" unique_id=784916125]
layout_mode = 2
text = "Play Music"

[connection signal="close_requested" from="." to="." method="hide"]
[connection signal="toggled" from="M/V/ShowDestsCheck" to="." method="_on_ShowDestsCheck_toggled"]
[connection signal="toggled" from="M/V/ShowHighlightsCheck" to="." method="_on_ShowHighlightsCheck_toggled"]
[connection signal="toggled" from="M/V/SoundsCheck" to="." method="_on_SoundsCheck_toggled"]
[connection signal="toggled" from="M/V/M/V/SoundCheckCheck" to="." method="_on_SoundCheckCheck_toggled"]
[connection signal="toggled" from="M/V/M/V/SoundMusicCheck" to="." method="_on_SoundMusicCheck_toggled"]
